# Bulk_email_sender

./: .gitignore  CMakeLists.txt  Quick_Start_Guide.md  README.md  SMTP_Configuration_Guide.md  build-windows.bat  build.bat  run.bat
BulkEmailApp/: CMakeLists.txt  README.md
BulkEmailApp/src/: EmailCampaign.cpp  EmailCampaign.h  EmailSender.cpp  EmailSender.h  MainWindow.cpp  MainWindow.h  main.cpp
resources/: app.manifest  app.rc  resources.qrc
src/: CampaignManager.cpp  CampaignManager.h  DatabaseManager.cpp  DatabaseManager.h  EmailManager.cpp  EmailManager.h  MainWindow.cpp  MainWindow.h  SMTPClient.cpp  SMTPClient.h  analytics.cpp  analytics.h  analyticsdashboard.cpp  analyticsdashboard.h  appsettings.cpp  appsettings.h  contactlistmanager.cpp  contactlistmanager.h  csvreader.cpp  csvreader.h  database.cpp  database.h  emailcampaign.cpp  emailcampaign.h  emailmanager.cpp  emailmanager.h  emailtemplate.cpp  emailtemplate.h  emailvalidator.cpp  emailvalidator.h  htmlemailbuilder.cpp  htmlemailbuilder.h  logger.cpp  logger.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  settingsdialog.cpp  settingsdialog.h  (+6 more)
